--- a/backend/reactapp/package.json
+++ b/backend/reactapp/package.json
@@ -10,8 +10,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.3.1",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "sync-request": "^6.1.0"
   },
+  "proxy": "http://localhost:3000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
