--- a/backend/reactapp/package.json
+++ b/backend/reactapp/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.7",
     "react": "^16.12.0",
+    "react-dedux": "^0.4.0-beta.4",
     "react-dom": "^16.12.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^5.3.1",
     "react-scripts": "3.3.1",
+    "redux": "^4.2.0",
     "sync-request": "^6.1.0"
   },
   "proxy": "http://localhost:3000",
